Added AShot library and other examples